upcoming.css
/* removes user-agent's default spacing */
* {
    margin: 0;
    padding: 0;
}

body {
    font-family: 'Poppins', sans-serif;
    display: flex;
    flex-direction: column;
    gap: 130px;
}

/*---------------
HEADER STARTS HERE
-----------------*/

header {
    width: 1321px;
    height: 646px;
    background-color: #161616;
    margin: auto;
    border-radius: 25px;
    margin-top: 50px;
}

.banner {
    color: white;
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    column-gap: 25px;
    width: 100%;
    height: 100%;
    position: relative;
}

.banner-text {
    display: flex;
    flex-direction: column;
    justify-content: center;
    padding-left: 65px;
    gap: 35px;
}

.banner-title {
    font-weight: 700;
    font-size: 70px;
    width: 460px;
    line-height: 80px;
}

.banner-paragraph {
    font-weight: 400;
    line-height: 26px;
    font-size: 16px;
    width: 506px;
}

.banner-button {
    text-decoration: none;
    color: white;
    background-color: #DD0000;
    width: 135px;
    font-size: 20px;
    padding: 16px 25px;
    font-family: 'Roboto', sans-serif;
    background-image: linear-gradient(45deg, #845ec2, #d65db1, #ff6f91, #ff9671, #ffc75f, #f9f871);
    background-size: 700%;
    background-position: left;
    border-radius: 10px;
}

.banner-button:hover, .banner-button:focus {
    background-position: right;
    animation: button-animation 2s infinite alternate;
}

@keyframes button-animation {
    0% {
        background-position: left;
    }
    100% {
        background-position: right;
    }
}

/* Arrow icon on Watch Live button */
.chevron-right {
    margin-left: 20px;
}

.banner-image img {
    float: right;
    width: 581px;
    position: absolute;
    bottom: 0;
    right: 60px;
}

/*-------------
MAIN STARS HERE
---------------*/

main {
    display: flex;
    width: 1321px;
    margin: auto;
    column-gap: 24px;
}

/* main section side navigation bar */
.main-section-nav {
    background-color: #161616;
    width: 312px;
    height: 312px;
    border-radius: 10px;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

.main-section-nav ul {
    display: flex;
    list-style-type: none;
    height: 100%;
    flex-direction: column;
    justify-content: space-evenly;
}

/* main section side navigation anchors*/
.main-section-nav a {
    border-radius: 10px;
    display: flex;
    align-items: center;
    justify-content: center;
    width: 252px;
    height: 64px;
    background-color: white;
    text-decoration: none;
    color: black;
    font-weight: 600;
}

#active-link {
    color: white;
    background-color: #d65db1;
}

/* right side match schedule */
.match-cards {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    column-gap: 20px;
    row-gap: 20px;
}

.match-card {
    display: flex;
    flex-direction: column;
    border: 1px solid #E8E8E8;
    border-radius: 10px;
    width: 312px;
    height: 242px;
    justify-content: center;
    align-items: center;
}

.match-team-images {
    display: flex;
    column-gap: 20px;
    align-items: center;
    justify-content: center;
}

.vs {
    font-size: 16px;
    font-weight: 600;
}

.match-teams {
    margin-top: 20px;
    font-size: 20px;
    font-weight: 600;
}

.match-time {
    font-size: 16px;
    font-weight: 400;
    color: #4D4D4D;
    margin-top: 10px;
}

.view-all-div {
    display: none;
}

/*---------------
FOOTER STARTS HERE
-----------------*/

footer {
    background-color: #161616;
    width: 100%;
    height: 444px;
    color: white;
}

footer h2 {
    font-size: 40px;
    font-weight: 600px;
    text-align: center;
    margin-top: 125px;
}

hr {
    width: 1320px;
    margin: auto;
    border: 1px solid rgba(255, 255, 255, 0.1);
    margin-top: 75px;
}

footer ul {
    list-style-type: none;
    display: flex;
    gap: 25px;
}

footer li {
    display: inline;
}

footer a {
    color: white;
    text-decoration: none;
    font-size: 16px;
    font-weight: 500;
}

.footer-links{
    margin-top: 35px;
    display: flex;
    justify-content: center;
}

.footer-links, .footer-social {
    margin-top: 35px;
    display: flex;
    justify-content: center;
}

/* social media icons */
.footer-social a {
    font-size: 35px;
}

/*--- media queries ---*/
/* mobile device smaller than 577px */
@media screen and (max-width: 576px) {
    body {
        gap: 30px;
    }

    header {
        width: 334px;
        height: 472px;
        margin-top: 20px;
    }

    .banner {
        display: grid;
        grid-template-columns: repeat(1, 1fr);
        grid-template-rows: repeat(2, 1fr);
        gap: 20px;
    }

    .banner-text {
        width: 258px;
        gap: 10px;
        padding: 0;
        margin: auto;
    }
    
    .banner-button {
        margin: auto;
        font-size: 16px;
        width: 105px;
        padding: 12px 10px;
    }

    .banner-button a {
        font-size: 20px;
    }

    .banner-title {
        width: 90%;
        margin: auto;
        height: 66px;
        font-size: 22px;
        line-height: 33px;
        text-align: center;
    }

    .banner-paragraph {
        margin: auto;
        font-size: 14px;
        text-align: center;
        width: 90%;
        line-height: 2;
        text-overflow: ellipsis;
        overflow: hidden;
        white-space: nowrap;
    }

    .banner-image img {
        width: 233px;
        height: 245px;
        left: 62px;
    }

    .chevron-right {
        margin-left: 10px;
    }

    main {
        width: 100%;
        flex-direction: column;
        gap: 24px;
    }

    .main-section-nav {
        background-color: white;
        margin: auto;
        width: 210px;
        height: 176px;
    }

    .main-section-nav ul {
        background-color: white;
        align-items: center;
    }

    .main-section-nav a {
        width: 180px;
        height: 48px;
        border: 1px solid rgba(22, 22, 22, 0.1);
    }

    .main-section-nav .wide-button {
        width: 210px;
    }

    .match-cards {
        display: flex;
        flex-direction: column;
        align-items: center;
        justify-content: center;
    }

    .match-teams {
        font-size: 14px;
    }

    .match-time {
        font-size: 13px;
    }

    /* .last-row-match-item {
        display: none;
    } */
    
    .view-all-div {
        display: none;
    }

    footer {
        width: 100%;
        height: 100%;
    }

    footer hr {
        width: 335px;
        margin-top: 30px;
    }

    footer ul {
        margin-top: 30px;
        display: flex;
        flex-direction: column;
    }

    footer h2 {
        font-size: 22px;
        margin-top: 50px;
    }

    .footer-links {
        margin-top: 10px;
        display: flex;
        flex-direction: column;
    }

    .footer-links ul div {
        display: flex;
        flex-direction: column;
    }

    .footer-links li {
        margin-right: 0;
        font-size: 14px;
        line-height: 50px;
        text-align: center;
    }

    .footer-social {
        margin-top : 45px;
        margin-bottom: 50px;
    }

    .footer-social ul {
        gap: 50px;
        margin-top: 0;
        flex-direction: row;
        align-items: center;
        justify-content: center;
    }
}


/* display larger than or equal to 577px and smaller than 993px */
@media screen and (max-width: 992px) and (min-width: 577px) {
    body {
        row-gap: 70px;
    }

    /* banner */
    header {
        height: 398px;
        width: 95vw;
    }

    .banner {
        width: 100%;
        height: 398px;
        display: grid;
        grid-template-columns: repeat(2, 1fr);
    }

    .banner-text {
        gap: 25px;
        padding: 40px;
        margin: auto;
    }

    .banner-title {
        width: 47vw;
        font-size: 35px;
        line-height: 33px;
    }

    .banner-paragraph {
        width: 44vw;
        font-size: 0.9375em;
    }

    .banner-image img{
        width: 45vw;
        right: 2vw;
    }

    .banner-button {
        font-size: 15px;
        padding: 15px 15px;
        width: 105px;
    }

    /* Arrow icon on Watch Live button */
    .chevron-right {
        margin-left: 15px;
    }

    /* main part */
    main {
        width: 95vw;
        flex-direction: column;
        row-gap: inherit;
    }

    .main-section-nav {
        width: 100%;
        height: 100%;
        background-color: white;
        margin: auto;
    }

    .main-section-nav ul {
        width: 100%;
        flex-direction: row;
        row-gap: 25px;
        justify-content: space-between;
    }

    .main-section-nav a {
        border: 1px solid rgba(22, 22, 22, 0.1);
        width: 30vw;
        height: 64px;
    }

    .match-cards {
        display: grid;
        grid-template-columns: repeat(2, 1fr);
        column-gap: 6vw;
        gap: inherit;
    }
    
    .match-card {
        width: 44vw;
    }

    .match-teams {
        font-size: 14px;
    }

    .match-time {
        font-size: 12px;
    }

    .vs {
        font-size: 14px;
    }

    /* .last-row-match-item {
        display: none;
    } */

    /* button to display remaining cards in tablet mode */
    .view-all-div {
        display: flex;
        justify-content: center;
        grid-column: span 2;
    }

    .see-all {
        color: white;
        text-decoration: none;
        padding: 12px 29px;
        background-color: #ff6f91;
        border-radius: 5px;
    }

    /* footer */
    footer {
        width: 100%;
        /* padding-bottom: 0px; */
    }

    footer h2 {
        margin-top: 50px;
    }

    hr {
        margin-top: 30px;
        width: 85vw;
    }

    footer li {
        display: flex;
    }

    .footer-links {
        width: 635px;
        flex-wrap: wrap;
        margin: auto;
        margin-top: 55px;
    }

    .footer-links ul {
        display: grid;
        grid-template-columns: repeat(4, 1fr);
        gap: 20px;
    }

    .footer-links a {
        font-size: 16px;
        font-weight: 500;
        width: 100%;
    }

    .footer-links-first-div, .footer-links-last-div {
        display: flex;
        width: 85vw;
        justify-content: space-between;
    }

    .footer-links-first-div li, .footer-links-last-div li {
        margin-left: 0;
    }

    .footer-links-first-div li, .footer-links-last-div li {
        margin-right: 0;
    }

    .footer-links-last-div {
        margin: auto;
        width: 205px;
        margin-top: 20px;
    }

    .footer-links div {
        display: flex;
        grid-column-start: 1;
        width: 40%;
        margin: auto;
        justify-content: space-between;
        grid-column-end: -1;
    }
    .footer-social ul {
        gap: 50px;
    }
}

